Fix nav on iphone5

--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ nav li a {
   display: block;
   color: white;
   margin: auto;
-  padding: 18px 7px; }
+  padding: 12px 4px; }
 
 nav li a:hover {
   background-color: #a6a6a6;
