--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -27,7 +27,7 @@ nav li a {
   display: block;
   color: white;
   margin: auto;
-  padding: 18px 7px;
+  padding: 12px 4px;
 }
 
 
